# SlicerOmero

./: CMakeLists.txt  README.md
OmeroConnection/: CMakeLists.txt  OmeroConnection.py
OmeroConnection/Resources/UI/: OmeroConnection.ui
